# crabgresql

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  codecov.yml  deny.toml  renovate.json
.cargo/: mutants.toml
.config/: nextest.toml
.github/workflows/: ci.yml  fuzz-nightly.yml  mutants.yml  rust-clippy.yml
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs  serde.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: addr.rs  cluster.rs  committer.rs  durable.rs  forward.rs  lib.rs  linearizer.rs  network.rs  node.rs  recovery_gate.rs  route.rs  server_node.rs  store.rs  twopc.rs  types.rs
crates/cluster/src/range/: cluster.rs  map.rs  meta.rs  mod.rs  router.rs
crates/cluster/src/transport/: client.rs  frame.rs  mod.rs  partition.rs  protocol.rs  server.rs  testcluster.rs
crates/cluster/tests/: crossrange_2pc.rs  crossrange_2pc_abort_atomicity_model.rs  crossrange_2pc_gtm_reuse_model.rs  crossrange_2pc_model.rs  crossrange_2pc_overlap_settle_model.rs  crossrange_2pc_settle_model.rs  durable_scenarios.rs  gateway_local.rs  jepsen_bank.rs  linearizable_read_model.rs  meta_range_replicated.rs  model.rs  multirange.rs  mvcc_write_conflict_model.rs  recovery_watermark_model.rs  remote_forward.rs  scenarios.rs  sql_durable.rs  sql_over_raft.rs  write_once_decision_model.rs
crates/conformance/: Cargo.toml
crates/conformance/corpus/: aggregates.sql  boolean_logic.sql  cast.sql  ctes.sql  datetime.sql  floating_point.sql  int4_arith.sql  interval.sql  joins.sql  make_justify.sql  math_string_functions.sql  nested_query_expressions.sql  numeric.sql  numeric_transcendental.sql  order_by.sql  predicates.sql  scalar_functions.sql  set_operations.sql  smoke.sql  subqueries.sql  to_char_datetime.sql  to_char_numeric.sql  transactions.sql  update_delete.sql  values.sql
crates/conformance/src/: lib.rs  main.rs
crates/crabgresql/: Cargo.toml
crates/crabgresql/src/: main.rs
crates/crabgresql/tests/: crossrange_2pc_nemesis.rs  crossrange_2pc_net.rs  crossrange_2pc_replicated.rs  jepsen_elle.rs  meta_range_gateway.rs  multiprocess.rs  multirange_gateway.rs  participant_kill_bank.rs  range0_cascade_kill_bank.rs  range0_leader_kill_drain.rs
crates/crabgresql/tests/harness/: mod.rs
crates/executor/: Cargo.toml
crates/executor/src/: agg.rs  clock.rs  commit.rs  cte.rs  datetime_fn.rs  error.rs  eval.rs  exec.rs  foreign.rs  format_fn.rs  func.rs  gtm.rs  join.rs  lib.rs  lockmgr.rs  procarray.rs  query.rs  read_gate.rs  scope.rs  seq.rs  session.rs  setops.rs  subquery.rs  values.rs
crates/executor/tests/: aggregates.rs  casts.rs  concurrency.rs  ctes.rs  datetime.rs  durability.rs  end_to_end.rs  floating_point.rs  formatting.rs  joins.rs  linearizable_reads.rs  math_string_functions.rs  mutation_semantics.rs  numeric.rs  ordering.rs  predicates.rs  query_expressions.rs  recovery.rs  recursion_guard.rs  scalar_functions.rs  set_operations.rs  subqueries.rs  transactions.rs  update_delete.rs  values_query.rs
crates/kafka_fdw/: Cargo.toml
crates/kafka_fdw/src/: config.rs  decode.rs  error.rs  lib.rs  provider.rs  scan.rs  source.rs  types.rs
crates/kafka_fdw/tests/: roundtrip.rs
crates/kafka_fdw/tests/harness/: mod.rs
crates/kv/: Cargo.toml
crates/kv/src/: error.rs  fjall_store.rs  key.rs  keyenc.rs  lib.rs  rowenc.rs  store.rs
crates/mvcc/: Cargo.toml
crates/mvcc/src/: clog.rs  lib.rs  snapshot.rs  version.rs  visibility.rs  xid.rs
crates/pgparser/: Cargo.toml
crates/pgparser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/pgparser/tests/: libpg_query_oracle.rs
crates/pgtypes/: Cargo.toml
crates/pgtypes/src/: cast.rs  datetime.rs  datum.rs  encoding.rs  error.rs  lib.rs  numeric.rs  ops.rs
crates/pgtypes/tests/: numeric_transcendental_oracle.rs
crates/pgwire/: Cargo.toml
crates/pgwire/src/: engine.rs  error.rs  lib.rs  scram.rs  server.rs  session.rs  stub.rs
crates/pgwire/src/messages/: backend.rs  frontend.rs
crates/pgwire/tests/: cancel.rs  extended_query.rs  golden_trace.rs  scram_auth.rs  simple_query.rs  sqlx_driver.rs  tls.rs
crates/pgwire/tests/fixtures/: psql-select1.trace  test-ca-key.pem  test-ca.pem  test-server-key.pem  test-server.pem
docs/superpowers/plans/: 2026-06-11-sp1-wire-protocol-conformance.md  2026-06-11-sp2-vertical-slice.md  2026-06-11-sp3-durable-storage.md  2026-06-11-sp4-mvcc-transactions.md  2026-06-12-sp10-sql-leader-routing.md  2026-06-12-sp5-xact-foundation.md  2026-06-12-sp6-concurrent-writers.md  2026-06-12-sp7-raft-single-range.md  2026-06-12-sp8-durable-raft-storage.md  2026-06-12-sp9-network-multiprocess.md  2026-06-12-zerocopy-fixed-layout-encoders.md  2026-06-13-sp11-overwire-serializability.md  2026-06-13-sp12-linearizable-reads.md  2026-06-13-sp13-d3a-multirange-core.md  2026-06-13-sp14-d3a-net-network-range-routing.md  2026-06-13-sp15-d3b-meta-range-descriptors.md  2026-06-14-sp16-d3c-crossrange-2pc-core.md  2026-06-14-sp17-d3c-net-crossrange-2pc-network.md  2026-06-14-sp18-d3c-net-hard-fault-recovery.md  2026-06-14-sp19-d3c-net-hard-rep-replicated-2pc.md  2026-06-14-sp20-d3c-gc-scan-recovery-watermark.md  2026-06-14-sp21-d3c-restage-coordinator-reattempt.md  2026-06-14-sp22-d3c-settle-before-serve.md  2026-06-15-sp23-gtm-global-xid-reuse-reseed.md  2026-06-15-sp24-d3c-abort-atomicity-half-leak.md  2026-06-16-sp26-d3c-cascade-settle-complete.md  2026-06-16-sp27-aggregates-group-by.md  2026-06-16-sp30-double-precision-avg.md  2026-06-16-sp31-explicit-casts.md  2026-06-16-sp32-numeric.md  2026-06-16-sp33-joins.md  2026-06-16-sp33-math-string-functions.md  2026-06-16-sp34-numeric-transcendentals.md  2026-06-16-sp37-datetime-types.md  2026-06-17-sp38-datetime-formatting-constructors.md  2026-06-17-sp38-set-operations.md  2026-06-17-sp39-values-query.md  2026-06-18-crabgresql-ctes-with.md  2026-06-18-query-expression-generalization.md  (+3 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_key.rs  decode_row.rs  parse_sql.rs  wire_decode.rs
scripts/: check-no-native.sh  durable-restart-smoke.sh  gen-test-cert.sh  oracle-up.sh  psql-smoke.sh
(+43 files in other folders)
