[workspace]
resolver = "3"
members = [
    "crates/pgwire",
    "crates/crabgresql",
    "crates/conformance",
    "crates/pgtypes",
    "crates/kv",
    "crates/catalog",
    "crates/pgparser",
    "crates/executor",
    "crates/mvcc",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "PostgreSQL"

[workspace.lints.rust]
unsafe_code = "forbid"

# unwrap_used stays on for ALL targets including tests (CI runs -D warnings):
# the project convention is expect("reason") everywhere, tests included.
[workspace.lints.clippy]
unwrap_used = "warn"

[workspace.dependencies]
pgwire = { path = "crates/pgwire" }
pgtypes = { path = "crates/pgtypes" }
kv = { path = "crates/kv" }
mvcc = { path = "crates/mvcc" }
catalog = { path = "crates/catalog" }
pgparser = { path = "crates/pgparser" }
executor = { path = "crates/executor" }
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false }
rustls-rustcrypto = "0.0.2-alpha"
rustls-pemfile = "2"
sha2 = "0.11"
hmac = "0.13"
pbkdf2 = { version = "0.13", default-features = false, features = ["hmac"] }
base64 = "0.22"
rand = "0.10"
subtle = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = "0.7"
proptest = "1"
zerocopy = { version = "0.8", features = ["derive"] }
