[workspace]
resolver = "3"
members = [
    "crates/pgwire",
    "crates/crabgresql",
    "crates/conformance",
    "crates/pgtypes",
    "crates/kv",
    "crates/catalog",
    "crates/pgparser",
    "crates/executor",
    "crates/mvcc",
    "crates/cluster",
    "crates/kafka_fdw",
]
# The fuzz crate is its own workspace (libfuzzer-sys pulls native `cc`); keep it
# out of the main workspace so the shipped tree stays pure Rust.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "PostgreSQL"

[profile.mutants]
inherits = "test"
debug = "none"

[workspace.lints.rust]
unsafe_code = "forbid"

# unwrap_used stays on for ALL targets including tests (CI runs -D warnings):
# the project convention is expect("reason") everywhere, tests included.
[workspace.lints.clippy]
unwrap_used = "warn"

[workspace.dependencies]
pgwire = { path = "crates/pgwire" }
pgtypes = { path = "crates/pgtypes" }
kv = { path = "crates/kv" }
fjall = "3.1.5"
mvcc = { path = "crates/mvcc" }
catalog = { path = "crates/catalog" }
pgparser = { path = "crates/pgparser" }
executor = { path = "crates/executor" }
cluster = { path = "crates/cluster" }
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false }
rustls-rustcrypto = "0.0.2-alpha"
rustls-pemfile = "2"
sha2 = "0.11"
hmac = "0.13"
# Pinned to the exact prerelease that crabka-security 0.3.7 requires (=0.13.0-rc.10)
# so the kafka_fdw optional deps unify with the workspace. Both are pure-Rust
# RustCrypto with an identical pbkdf2_hmac API; zero-C is unaffected. Long-term
# fix: crabka-security moves to stable pbkdf2 0.13.0.
pbkdf2 = { version = "=0.13.0-rc.10", default-features = false, features = ["hmac"] }
base64 = "0.22"
rand = "0.10"
subtle = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = "0.7"
proptest = "1"
openraft = { version = "0.9", features = ["serde"] }
arc-swap = "1"
async-trait = "0.1"
bigdecimal = "0.4"
dashu-float = "0.5"
stateright = "0.31"
zerocopy = { version = "0.8", features = ["derive"] }
tempfile = "3"
kafka_fdw = { path = "crates/kafka_fdw" }
crabka-client-core = "0.3"
crabka-client-admin = "0.3"
crabka-protocol = "0.3"
crabka-schema-serde = { version = "0.3", features = ["avro", "json"] }
crabka-security = "0.3"
apache-avro = "0.21"
prost-reflect = "0.16"
# serde_json = "1" is already declared above

# local cross-repo dev override (sibling checkout); CI uses crates.io:
# [patch.crates-io]
# crabka-client-core = { path = "../crabka/crates/client-core" }   # uncomment for local dev
