[package]
name = "cluster"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kv = { workspace = true }
executor = { workspace = true }
openraft = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
stateright = { workspace = true }
proptest = { workspace = true }
