[package]
name = "conformance"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
