[package]
name = "crabgresql"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cluster.workspace = true
executor.workspace = true
pgwire.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustls.workspace = true
rustls-rustcrypto.workspace = true
rustls-pemfile.workspace = true
rand.workspace = true
