[package]
name = "crabgresql"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
kafka = ["dep:kafka_fdw", "kafka_fdw/kafka"]

[dependencies]
kafka_fdw = { workspace = true, optional = true }
cluster.workspace = true
executor.workspace = true
pgwire.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustls.workspace = true
rustls-rustcrypto.workspace = true
rustls-pemfile.workspace = true
rand.workspace = true

[dev-dependencies]
cluster.workspace = true
tokio-postgres.workspace = true
tempfile.workspace = true
stateright.workspace = true
# The multi-process harness spawns node children via tokio::process, which the
# workspace tokio feature set doesn't include; enable it here for the test crate.
tokio = { workspace = true, features = ["process"] }
