[package]
name = "kafka_fdw"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
kafka = ["dep:crabka-client-core", "dep:crabka-client-admin", "dep:crabka-protocol", "dep:crabka-schema-serde", "dep:apache-avro", "dep:serde_json", "dep:rustls", "dep:rustls-rustcrypto", "dep:jiff", "dep:bigdecimal", "dep:num-bigint", "dep:crabka-security"]

[dependencies]
catalog.workspace = true
pgtypes.workspace = true
executor.workspace = true
kv.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
crabka-client-core  = { workspace = true, optional = true }
crabka-client-admin = { workspace = true, optional = true }
crabka-protocol     = { workspace = true, optional = true }
crabka-schema-serde = { workspace = true, optional = true }
crabka-security     = { workspace = true, optional = true }
apache-avro = { workspace = true, optional = true }
serde_json  = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-rustcrypto = { workspace = true, optional = true }
jiff = { version = "0.2", optional = true }
bigdecimal = { workspace = true, optional = true }
num-bigint = { version = "0.4", optional = true }
