[package]
name = "pgparser"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
oracle = ["dep:pg_query"]

[dependencies]
thiserror.workspace = true
pgtypes.workspace = true
pg_query = { version = "6", optional = true }

[dev-dependencies]
proptest.workspace = true
