[package]
name = "pgtypes"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
bigdecimal.workspace = true
dashu-float.workspace = true
jiff = { version = "0.2", features = ["tzdb-bundle-always"] }

[dev-dependencies]
proptest.workspace = true
