[package]
name = "pgwire"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
sha2.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
base64.workspace = true
rand.workspace = true
subtle.workspace = true

[dev-dependencies]
tokio-postgres.workspace = true
proptest = { workspace = true }
rustls-rustcrypto.workspace = true
rustls-pemfile.workspace = true
tokio = { workspace = true, features = ["full"] }
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio"] }
